# opqbox2

./: .gitignore
Firmware/: .gitignore  CMakeLists.txt  Makefile
Firmware/Drivers/: Makefile
Firmware/Inc/: peripheral_config.h  runtime_config.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Firmware/Src/: opq.c  peripheral_config.c  runtime_config.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
Mechanical/: opqboxsize.dwg
Schematics/: opqbox2.pcb  opqbox2.sch
Schematics/Gerbers/: GND_copper.GP1  PWR_copper.GP2  board_outline.GML  bottom-copper.GBL  bottom-pastemask.GBP  bottom-silkscreen.GBO  bottom-soldermask.GBS  drill.DRL  drill.lst  top-copper.GTL  top-pastemask.GTP  top-silkscreen.GTO  top-soldermask.GTS
Software/: .gitignore  Pypid.py  build.sh  install.sh  opq_services  opqbox_services.sh  template.set
Software/Acquisition/: CMakeLists.txt  Doxyfile  Makefile  acquisition.py  gatekeeper.py  redisscraper.py  settings.py  settings.set  setup.py  zmqlistener.py
Software/Acquisition/lib/: LocalAnalysis.hpp  Reader.hpp  RedisSerializer.hpp  RedisTrigger.hpp  Settings.hpp  SyncQueue.hpp  ZMQSerializer.hpp  ZMQTrigger.hpp  opqdata.hpp  util.hpp
Software/Acquisition/opqacq/: acquisition  opq_pb2.py  redisscraper.py  zmqlistener.py
Software/Acquisition/src/: LocalAnalysis.cpp  Reader.cpp  RedisSerializer.cpp  RedisTrigger.cpp  Settings.cpp  ZMQSerializer.cpp  ZMQTrigger.cpp  main.cpp
Software/DSP/: isp.py  opq_pb2.py  spi.py
Software/DSPutill/: spi.py
Software/DSPutill/dsputil/: reset_dsp.py
Software/Triggering/: CMakeLists.txt
Software/Triggering/lib/: RedisSerializer.hpp  ZMQSerializer.hpp  opqdata.hpp  util.hpp  version.hpp
Software/Triggering/src/: LocalAnalysis.cpp  Reader.cpp  RedisSerializer.cpp  ZMQSerializer.cpp  ZMQTrigger.cpp  main.cpp
Software/kernel/: Makefile  opq_main.c
Software/kernel/scripts/: opq_load.sh
Software/opqwifi/: MANIFEST.in  setup.py
Software/opqwifi/opqwifi/: opqwifi
Software/opqwifi/opqwifi/WIFIutill/: wifi_ap.py  wifi_check.py  wifi_connect.py  wifi_ssids.py  wifi_wait.py
Software/pi/: __init__.py
Software/proto/: opq.proto
Software/server/: app.py
Software/server/opqwifi/: opqwifi
Software/server/opqwifi/WIFIutill/: wifi_connect.py
Software/server/views/: networks.tpl
Software/tasks/: Tasks.py
Software/test/: testUart.py
pypi/: Pypid.py  kill-pypid.sh
pypi/DSP/: isp.py  spi.py
pypi/bottle/: app.py
pypi/bottle/views/: main1.tpl  networks.tpl
pypi/net/: __init__.py  listSSID.py  wifiap.py
pypi/server/: app.py
pypi/server/views/: networks.tpl
pypi/tasks/: Tasks.py
